font issues on mobile

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -10,7 +10,8 @@ html,
 body {
   padding: 0;
   margin: 0;
-  font-family: 'Cabin', sans-serif;
+  font-family: Cabin, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto,
+    Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
   scroll-behavior: smooth;
 }
 
